# minershartx

./: .gitignore  CMakeLists.txt  README.md
examples/: pool.example.json  solo.example.json
include/: address_decoder.h  cuda_scan.h  nonce_partition.h  pool_miner.h  sha256_cpu.h  solo_miner.h
scripts/: build_linux.sh  build_windows.ps1  run_pool_5070ti.bat  run_pool_5090.bat  run_pool_linux.sh  run_solo_5090.bat  run_solo_linux.sh  setup_windows_tools.ps1
src/: address_decoder.cpp  main.cpp  pool_miner.cpp  sha256_benchmark.cu  sha256_cpu.cpp  solo_miner.cpp
tests/: selftest_main.cpp  test_address.cpp  test_nonce_partition.cpp  test_sha256.cpp
